# qt5_network_example

./: CMakeLists.txt  README.md  start.sh
src/: main.cpp
src/client/: BlockingClient.cpp  BlockingClient.h  CMakeLists.txt  ClientThread.cpp  ClientThread.h  ClientWorker.cpp  ClientWorker.h  main.cpp
src/server/: CMakeLists.txt  Dialog.cpp  Dialog.h  FortuneServer.cpp  FortuneServer.h  ServerTask.cpp  ServerTask.h  ServerThread.cpp  ServerThread.h
test/client/: CMakeLists.txt  Test_ClientWorker.cpp
test/server/: CMakeLists.txt  Test_FortuneServer.cpp  Test_ServerTask.cpp  Test_SeverTask.cpp  utilities.cpp  utilities.h
